# ai-survivor-guide

./: .gitignore  AGENTS.md  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
assets/css/: ebook.css
books/en-us/: surviving-the-ai-era.md
books/pt-br/: sobrevivendo-a-era-da-ia.md
scripts/: build_pdf.py
